# wdk-whvp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yaml
cmake/: Config.cmake.in
include/: WinHvCompat.h  WinHvEmulation.h  WinHvPlatform.h  WinHvPlatformDefs.h
lib/amd64/: WinHvEmulation.def  WinHvEmulation.lib  WinHvPlatform.def  WinHvPlatform.lib
